--- a/FrontEnd/src/styles/Session.scss
+++ b/FrontEnd/src/styles/Session.scss
@@ -17,11 +17,11 @@
   display: flex;
   flex-direction: column;
   margin-right: 7rem;
+  font-size: 15px;
 }
 
 h1 {
   font-size: 50px;
-  // font-weight: bolder;
   text-shadow: #fc0 1px 0 5px; /* color | offset-x | offset-y | blur-radius */
 }
 
@@ -94,7 +94,7 @@ input {
 .session_btn__login:hover {
   transform: translateY(-5px);
   background: linear-gradient(to right, rgb(112, 22, 112), orange);
-}
+};
 
 .session_btn__back {
   display: flex;
@@ -120,7 +120,7 @@ footer {
   font-size: 0.85rem;
   border-top: 1px solid;
   border-color: gray;
-}
+};
 
 span {
   margin-top: 1rem;
@@ -136,33 +136,164 @@ span {
   border-top-style: double;
   width: 80vw;
   margin: 15rem auto;
-  color: yellowgreen;
+  color: burlywood;
   text-decoration: none;
-}
+};
 
 .session_footer_a_1 {
   color: yellowgreen;
   text-decoration: none;
-}
+};
 
 .session_footer_a_2 {
   color: orange;
   text-decoration: none;
-}
+};
 
 
-@media only screen and (max-width: 900px) {
+
+// @media only screen and (max-width: 900px) {
+
+//   .session {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//   }
+//   .session_notes {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     margin-right: 0;
+//   }
+
+// }
+
+@media only screen and (min-height: 600px) and (max-height: 1020px) {
 
   .session {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+
+  h1 {
+    font-size: 25px;
+  }
+
   .session_notes {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 0;
+    font-size: 10px;
+  }
+
+  .session_footer {
+    display: none;
   }
 
 }
+
+@media only screen and (min-height: 600px) and (max-height: 750px) {
+
+  h2 {
+    font-size: 15px;
+  }
+
+  .session_login {
+    border-radius: 0.5rem;
+    padding: 1rem;
+    font-size: 0.5rem;
+    min-height: 35vh;
+    min-width: 15vw;
+  };
+  
+  label {
+    padding: 0.25rem;
+  }
+  
+  input {
+    padding: 0.25rem;
+    width: 9rem;
+    height: 1rem;
+    font-size: 0.6rem;
+  }
+
+  .session_btn {
+    margin-top: .50rem;
+    margin-bottom: .50rem;
+  }
+  
+  .session_btn__login {
+    padding: 0.25rem;
+    width: 2.5rem;
+    height: 1rem;
+    margin-right: 0.5rem;
+    font-size: 0.5rem;;
+  };
+
+  .session_btn__back {
+    padding: 0.5rem;
+    width: 2.5rem;
+    height: 1rem;
+    font-size: 0.5rem;
+  };
+
+  .session_footer {
+    display: none;
+  }
+
+}
+
+@media only screen and (max-width: 500px) and (max-height: 599px) {
+
+
+  // ===
+  .session_login {
+    border-radius: 0.5rem;
+    padding: 1rem;
+    font-size: 0.5rem;
+    min-height: 35vh;
+    min-width: 15vw;
+  };
+  
+  .session_login__form {
+    padding-top: 0.5rem;
+  };
+  
+  label {
+    padding: 0.25rem;
+  }
+
+
+  // ====
+  
+  input {
+    padding: 0.25rem;
+    width: 9rem;
+    height: 1rem;
+    font-size: 0.6rem;
+  }
+
+  .session_btn {
+    margin-top: .50rem;
+    margin-bottom: .50rem;
+  }
+  
+  .session_btn__login {
+    padding: 0.25rem;
+    width: 2.5rem;
+    height: 1rem;
+    margin-right: 0.5rem;
+    font-size: 0.5rem;;
+  };
+
+  .session_btn__back {
+    padding: 0.5rem;
+    width: 2.5rem;
+    height: 1rem;
+    font-size: 0.5rem;
+  };
+
+  .session_notes,
+  .session_footer {
+    display: none;
+  }
+
+};
