--- a/FrontEnd/src/styles/Session.scss
+++ b/FrontEnd/src/styles/Session.scss
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   margin-right: 7rem;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 h1 {
@@ -42,6 +42,7 @@ h1 {
 .session_login__form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   padding-top: 1rem;
   margin: auto;
@@ -55,7 +56,7 @@ label {
 input {
   display: flex;
   padding: 0.5rem;
-  width: 18rem;
+  width: auto;
   height: 2rem;
   background-color: whitesmoke;
   color: rgb(112, 22, 112);
@@ -150,152 +151,153 @@ span {
 
 
 
-// @media only screen and (max-width: 900px) {
-
-//   .session {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//   }
-//   .session_notes {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     margin-right: 0;
-//   }
-// }
-
-@media only screen and (max-width: 500px) and (min-height: 600px) and (max-height: 1020px) {
+@media only screen and (max-width: 900px) {
 
   .session {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-
-  h1 {
-    font-size: 25px;
-  }
-
   .session_notes {
-    font-size: 10px;
-  }
-
-  .session_footer {
-    display: none;
-  }
-
-}
-
-@media only screen and (max-width: 500px) and (min-height: 600px) and (max-height: 750px) {
-
-  h2 {
-    font-size: 15px;
-  }
-
-  .session_login {
-    border-radius: 0.5rem;
-    padding: 1rem;
-    font-size: 0.5rem;
-    min-height: 35vh;
-    min-width: 15vw;
-  }
-  
-  label {
-    padding: 0.25rem;
-  }
-  
-  input {
-    padding: 0.25rem;
-    width: 9rem;
-    height: 1rem;
-    font-size: 0.6rem;
-  }
-
-  .session_btn {
-    margin-top: .50rem;
-    margin-bottom: .50rem;
-  }
-  
-  .session_btn__login {
-    padding: 0.25rem;
-    width: 2.5rem;
-    height: 1rem;
-    margin-right: 0.5rem;
-    font-size: 0.5rem;;
-  };
-
-  .session_btn__back {
-    padding: 0.5rem;
-    width: 2.5rem;
-    height: 1rem;
-    font-size: 0.5rem;
-  }
-
-  footer {
-    font-size: 0.5rem;
-  }
-
-  .session_footer {
-    display: none;
-  }
-
-}
-
-@media only screen and (max-width: 500px) and (max-height: 599px) {
-
-  .session_login {
-    border-radius: 0.5rem;
-    padding: 1rem;
-    font-size: 0.5rem;
-    min-height: 35vh;
-    min-width: 15vw;
-  };
-  
-  .session_login__form {
-    padding-top: 0.5rem;
-  }
-  
-  label {
-    padding: 0.25rem;
-  }
-  
-  input {
-    padding: 0.25rem;
-    width: 9rem;
-    height: 1rem;
-    font-size: 0.6rem;
-  }
-
-  .session_btn {
-    margin-top: .50rem;
-    margin-bottom: .50rem;
-  }
-  
-  .session_btn__login {
-    padding: 0.25rem;
-    width: 2.5rem;
-    height: 1rem;
-    margin-right: 0.5rem;
-    font-size: 0.5rem;;
-  }
-
-  .session_btn__back {
-    padding: 0.5rem;
-    width: 2.5rem;
-    height: 1rem;
-    font-size: 0.5rem;
-  }
-
-  footer {
-    font-size: 0.5rem;
-  }
-
-  .session_notes,
-  .session_footer {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 0;
   }
 }
+
+// @media only screen and (max-width: 500px) and (min-height: 600px) {
+// // and (max-height: 1020px)
+//   .session {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//   }
+
+//   h1 {
+//     font-size: 25px;
+//   }
+
+//   .session_notes {
+//     font-size: 10px;
+//     margin-right: auto;
+//   }
+
+//   .session_footer {
+//     display: none;
+//   }
+
+// }
+
+// @media only screen and (max-width: 500px) and (min-height: 600px) and (max-height: 750px) {
+
+//   h2 {
+//     font-size: 15px;
+//   }
+
+//   .session_login {
+//     border-radius: 0.5rem;
+//     padding: 1rem;
+//     font-size: 0.5rem;
+//     min-height: 35vh;
+//     min-width: 15vw;
+//   }
+  
+//   label {
+//     padding: 0.25rem;
+//   }
+  
+//   input {
+//     padding: 0.25rem;
+//     width: 9rem;
+//     height: 1rem;
+//     font-size: 0.6rem;
+//   }
+
+//   .session_btn {
+//     margin-top: .50rem;
+//     margin-bottom: .50rem;
+//   }
+  
+//   .session_btn__login {
+//     padding: 0.25rem;
+//     width: 2.5rem;
+//     height: 1rem;
+//     margin-right: 0.5rem;
+//     font-size: 0.5rem;;
+//   };
+
+//   .session_btn__back {
+//     padding: 0.5rem;
+//     width: 2.5rem;
+//     height: 1rem;
+//     font-size: 0.5rem;
+//   }
+
+//   footer {
+//     font-size: 0.5rem;
+//   }
+
+//   .session_footer {
+//     display: none;
+//   }
+
+// }
+
+// @media only screen and (max-width: 500px) and (max-height: 599px) {
+
+//   .session_login {
+//     border-radius: 0.5rem;
+//     padding: 1rem;
+//     font-size: 0.5rem;
+//     min-height: 35vh;
+//     min-width: 15vw;
+//   };
+  
+//   .session_login__form {
+//     padding-top: 0.5rem;
+//   }
+  
+//   label {
+//     padding: 0.25rem;
+//   }
+  
+//   input {
+//     padding: 0.25rem;
+//     width: 9rem;
+//     height: 1rem;
+//     font-size: 0.6rem;
+//   }
+
+//   .session_btn {
+//     margin-top: .50rem;
+//     margin-bottom: .50rem;
+//   }
+  
+//   .session_btn__login {
+//     padding: 0.25rem;
+//     width: 2.5rem;
+//     height: 1rem;
+//     margin-right: 0.5rem;
+//     font-size: 0.5rem;;
+//   }
+
+//   .session_btn__back {
+//     padding: 0.5rem;
+//     width: 2.5rem;
+//     height: 1rem;
+//     font-size: 0.5rem;
+//   }
+
+//   footer {
+//     font-size: 0.5rem;
+//   }
+
+//   .session_notes,
+//   .session_footer {
+//     display: none;
+//   }
+// }
 
 @media only screen and (max-width: 450px) {
   .session_page {
