--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -1,9 +1,9 @@
 #root {
   display: flex;
   flex-direction: column;
-  margin: 30px 10px 10px 10px;
-  width: 100vw;
-  height: 100vh;
+  /* margin: 30px 10px 10px 10px; */
+  width: 100%;
+  height: 100%;
 
   /* min-width: 100vw;
   min-height: 100vh; */
