--- a/FrontEnd/src/styles/Session.scss
+++ b/FrontEnd/src/styles/Session.scss
@@ -1,22 +1,36 @@
 .session_page {
-  height: 80vh;
+  // height: 80vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  //align-content: flex-end;
+  //flex-wrap: wrap;
+  min-height: 100vh;
+  align-items: center;
 }
 
 .session {
   display: flex;
-  flex-direction: row;
-  justify-content:center;
-  align-items: baseline;
   color:burlywood;
-  margin-top: 5rem;
-  height: 80%;
+  flex-direction: row;
+  // justify-content:center;
+  // align-items: baseline;
+  // height: 80%;
+  //margin-top: 5rem;
+
+  margin: 5rem 10rem; // TB RL
+  justify-content: space-between;
+  
 }
 
 .session_notes {
   display: flex;
   flex-direction: column;
-  margin-right: 7rem;
-  font-size: 20px;
+  font-size: 25px;
+  //margin-right: 7rem;
+
+  margin-right: 2rem;
 }
 
 h1 {
@@ -35,8 +49,8 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
   color: rgb(112, 22, 112);
-  min-height: 35vh;
-  min-width: 15vw;
+  // min-height: 35vh;
+  // min-width: 15vw;
 }
 
 .session_login__form {
@@ -45,18 +59,18 @@ h1 {
   justify-content: center;
   align-items: center;
   padding-top: 1rem;
-  margin: auto;
+  // margin: auto;
 }
 
 label {
-  display: flex;
+  //display: flex;
   padding: 0.5rem;
 }
 
 input {
-  display: flex;
+  //display: flex;
   padding: 0.5rem;
-  width: auto;
+  width: 18rem;
   height: 2rem;
   background-color: whitesmoke;
   color: rgb(112, 22, 112);
@@ -73,8 +87,7 @@ input:active {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin: 2rem;
 }
 
 .session_btn__login {
@@ -131,16 +144,23 @@ span {
   flex-direction: row;
   justify-content: center;
   border: none;
-  border-bottom: none;
   border-top-style: double;
-  width: 80vw;
-  margin: 15rem auto;
   color: burlywood;
   text-decoration: none;
+  // border-bottom: none;
+  // width: 80vw;
+  //margin: 15rem auto;
+
+  width: 100vw;
+  height: 30vh;
+  background-color: rgb(133, 93, 133);
+  margin: 0;
+  padding: 0;
+  
 }
 
 .session_footer_a_1 {
-  color: yellowgreen;
+  color: whitesmoke;
   text-decoration: none;
 }
 
@@ -151,20 +171,20 @@ span {
 
 
 
-@media only screen and (max-width: 900px) {
+// @media only screen and (max-width: 900px) {
 
-  .session {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .session_notes {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 0;
-  }
-}
+//   .session {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//   }
+//   .session_notes {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     margin-right: 0;
+//   }
+// }
 
 // @media only screen and (max-width: 500px) and (min-height: 600px) {
 // // and (max-height: 1020px)
