--- a/FrontEnd/src/styles/Session.scss
+++ b/FrontEnd/src/styles/Session.scss
@@ -237,7 +237,7 @@ footer {
   }
 
   input {
-    font-size: 1rem;
+    font-size: 0.8rem;
     height: 1rem;
     width: 13rem;
   }
@@ -248,7 +248,6 @@ footer {
   }
 
 }
-
 
 
 /* Surface Duo Media screen */
@@ -292,6 +291,41 @@ footer {
 
 }
 
+/* Nest Hub */
+@media only screen and (max-width: 1024px) and (max-height: 600px) {
+
+  .session_page {
+    margin-top: 0.5rem;
+  }
+
+  .session_notes {
+    font-size: 20px;
+    margin-right: 2rem;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  .session_login__form {
+   padding: 0;
+  }
+
+  .session_btn {
+    margin: 1.5rem;
+  }
+
+  input {
+    font-size: 1rem;
+    height: 1.5rem;
+  }
+
+  footer {
+    font-size: 1rem;
+    height: 20vh;
+  }
+
+}
 
 
 // @media only screen and (max-width: 450px) {
