--- a/FrontEnd/src/styles/HeroTaskBoard.scss
+++ b/FrontEnd/src/styles/HeroTaskBoard.scss
@@ -1,20 +1,3 @@
-// .board_page {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-//   align-items: center;
-//   //min-height: 100vh;
-//   margin-top: 3rem;
-// }
-
-// .board {
-//   display: flex;
-//   color:burlywood;
-//   flex-direction: row;
-//   justify-content: space-between;
-//   margin: 5rem 10rem;
-// }
-
 .board_page {
   display: flex;
   flex-direction: column;
@@ -25,14 +8,17 @@
 }
 
 .board {
+  display: flex;
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
-  //   display: flex;
-//   color:burlywood;
-//   flex-direction: row;
-//   justify-content: space-between;
-//   margin: 5rem 10rem;
+}
+
+h1 {
+  display: flex;
+  font-size: 50px;
+  color: burlywood;
+  text-shadow: #fc0 1px 0 5px; /* color | offset-x | offset-y | blur-radius */
 }
 
 .board__hero_grid {
