--- a/FrontEnd/src/styles/HeroTaskBoard.scss
+++ b/FrontEnd/src/styles/HeroTaskBoard.scss
@@ -63,6 +63,9 @@ h1 {
   }
 
   h2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     margin-bottom: 0.5rem;
     color: #2d3748;
   }
@@ -80,16 +83,19 @@ h1 {
   .board__task_list {
     display: flex; //
     flex-direction: column;//
-    flex-wrap: wrap;//
+    //flex-wrap: wrap;//
     list-style: none;
     padding-left: 0;
 
     li {
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
+      // justify-content: ;
+      //flex-wrap: wrap;
       padding: 0.5rem;
       border-bottom: 1px solid #edf2f7;
-      color: red;// #2d3748;
+      color: #2d3748;
+      cursor: pointer;
 
       &.task-completed {
         text-decoration: line-through;
@@ -97,6 +103,7 @@ h1 {
       }
     }
   }
+
 }
 
 .loading {
