Fixe the 404 code error. Proxy error.

--- a/FrontEnd/src/styles/HeroTaskBoard.scss
+++ b/FrontEnd/src/styles/HeroTaskBoard.scss
@@ -67,7 +67,7 @@ h1 {
     flex-direction: row;
     justify-content: center;
     margin-bottom: 0.5rem;
-    color: #2d3748;
+    color:chocolate;
   }
 
   p {
