--- a/FrontEnd/src/styles/Modal.scss
+++ b/FrontEnd/src/styles/Modal.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.576);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +12,7 @@
 }
 
 .modal-box {
-  background: white;
+  background: linear-gradient(to bottom, rgb(16, 15, 15), rgb(83, 11, 129));
   padding: 2rem;
   border-radius: 8px;
   max-width: 500px;
@@ -24,8 +24,28 @@
   position: absolute;
   top: 8px;
   right: 12px;
+  color: burlywood;
   font-size: 1.5rem;
   background: transparent;
   border: none;
   cursor: pointer;
+}
+
+.modal-title {
+  text-align: left;
+  position: absolute;
+  top: 8px;
+  color: burlywood;
+  font-size: 1rem;
+  background: transparent;
+  border: none;
+  margin-bottom: 2rem; 
+}
+
+.modal-body { 
+  margin-bottom: 1rem; 
+}
+
+.modal-footer { 
+  text-align: right; 
 }
