Add background color with hovering the delete button to highlight.

--- a/FrontEnd/src/styles/HeroTaskBoard.scss
+++ b/FrontEnd/src/styles/HeroTaskBoard.scss
@@ -189,6 +189,8 @@ h1 {
   &:hover {
     transform: translateY(-5px);
     // background: linear-gradient(to right, rgb(112, 22, 112), orange);
+    background: rgb(244, 103, 103);
+    color: whitesmoke;
   }
 }
 
