--- a/FrontEnd/src/styles/Modal.scss
+++ b/FrontEnd/src/styles/Modal.scss
@@ -35,7 +35,7 @@
   text-align: left;
   position: absolute;
   top: 8px;
-  color: burlywood;
+  color: rgb(219, 151, 216);
   font-size: 1rem;
   background: transparent;
   border: none;
@@ -43,16 +43,21 @@
 }
 
 .modal-body { 
+  margin-top: 2rem;
   margin-bottom: 1rem; 
 }
 
 .modal-footer {
-  margin-top: 3rem;;
-  text-align: right;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: flex-end;
+  padding-top: 2rem;
   
   button {
     width: 6rem;
     height: 2.5rem;
+    gap: 2rem;
     color: whitesmoke;
     background-color: rgb(134, 37, 134);
     border-style: outset;
