--- a/FrontEnd/src/styles/Modal.scss
+++ b/FrontEnd/src/styles/Modal.scss
@@ -4,7 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.576);
+  background-color: rgba(0, 0, 0, 0);
+  backdrop-filter: blur(0.3rem);
   display: flex;
   justify-content: center;
   align-items: center;
