--- a/FrontEnd/src/styles/ContactUsFooter.scss
+++ b/FrontEnd/src/styles/ContactUsFooter.scss
@@ -22,6 +22,18 @@
     font-size: 1.2rem;
   }
 
+  .contact_list {
+    padding-left: 1.2rem;
+    li {
+      margin-bottom: 0.8rem;
+      font-size: 0.95rem;
+
+      strong {
+        color: #ffa07a;
+      }
+    }
+  }
+
   .contact_info {
     text-align: left;
     a {
