--- a/FrontEnd/src/styles/FormRegister.scss
+++ b/FrontEnd/src/styles/FormRegister.scss
@@ -4,14 +4,15 @@ form {
   justify-content: center;
   align-items: center;
   //gap: 0.5rem;
-}
 
-label {
+  .form_register__header {
     font-size: 1.8rem;
     color: #ffcba4;
     text-align: center;
     margin-bottom: 1rem;
 }
+}
+
 
 input {
   padding: 0.5rem;
