feat(AddSuperheroname): Rename the component to be more readable and purpose-specific
Create new file to style the AddSuperhero form

Modify UI styling to for buttons

--- a/FrontEnd/src/styles/AddSuperheroForm.scss
+++ b/FrontEnd/src/styles/AddSuperheroForm.scss
@@ -10,26 +10,26 @@ label {
   font-weight: bold;
   color:burlywood;
 }
-
-input[type="text"] {
+  
+input {
   padding: 0.5rem;
   font-size: 1rem;
-  margin-top: 2rem;
   border: 1px solid #ccc;
   border-radius: 4px;
+  color: rgb(112, 22, 112);
 }
 
-.form_task__btn {
+.form_add_superhero__btn {
+
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 2rem;
   gap: 2rem;
 
-  .form_task__btn_add,
-  .form_task__btn_cancel {
-    padding: 0.5rem 1rem;
+  .form_add_superhero__btn_add,
+  .form_add_superhero__btn_cancel {
+    padding: 0.5rem;
     font-size: 1rem;
     background-color:rgb(218, 162, 32);
     color: rgb(112, 22, 112);
@@ -40,11 +40,13 @@ input[type="text"] {
     align-self: flex-start;
 
     &:hover {
-      transform: translateY(-5px);
       background: linear-gradient(to right, rgb(112, 22, 112), orange);
       color: whitesmoke;
+      transform: translateY(-5px);
     }
   }
+  
 }
+
 
 
