styling(FormRegister): Modify exiting by adding style to canel button.

--- a/FrontEnd/src/styles/FormRegister.scss
+++ b/FrontEnd/src/styles/FormRegister.scss
@@ -43,7 +43,8 @@ input {
   gap: 2rem;
 }
 
-button[type="submit"] {
+button[type="submit"],
+button[type="button"] {
   padding: 0.5rem 1rem;
   font-size: 1rem;
   background-color:rgb(218, 162, 32);
