--- a/FrontEnd/src/styles/Session.scss
+++ b/FrontEnd/src/styles/Session.scss
@@ -62,6 +62,36 @@ input {
   border: none;
 }
 
+.password-input-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+
+  input {
+    padding: 0.5rem;
+    width: 18rem;
+    height: 2rem;
+    background-color: whitesmoke;
+    color: rgb(112, 22, 112);
+    font-size: 1.2rem;
+    border: none;
+  }
+
+  .toggle-password {
+    position: absolute;
+    margin-top: 2rem;
+    right: 1rem;
+    cursor: pointer;
+    font-size: 0.9rem;
+    color: rebeccapurple;
+    user-select: none;
+
+    &:hover {
+      color: darkorange;
+    }
+  }
+}
+
 input:active {
   border-color: rgb(112, 22, 112);
 }
