--- a/FrontEnd/src/styles/Session.scss
+++ b/FrontEnd/src/styles/Session.scss
@@ -20,10 +20,11 @@
   flex-direction: column;
   font-size: 25px;
   margin-right: 3rem;
+
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 50px !important;
   text-shadow: #fc0 1px 0 5px; /* color | offset-x | offset-y | blur-radius */
 }
 
@@ -45,11 +46,13 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 1rem;
+  margin-top: 2rem;
+  //padding-top: 1rem;
 }
 
 label {
-  padding: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 input {
@@ -170,8 +173,7 @@ footer {
   color: burlywood;
   text-decoration: none;
   width: 100vw;
-  height: 25vh;
-  margin: 0;
+  min-height: 20vh;
   padding: 0;
   // background-color: rgb(131, 33, 131);
   background-color: rgb(94, 28, 110);
