Modify background image protocol address.

--- a/FrontEnd/src/styles/HeroTaskBoard.scss
+++ b/FrontEnd/src/styles/HeroTaskBoard.scss
@@ -88,7 +88,7 @@
     min-width: 98vw;
     min-height: 5.7vh;
     background-color: rgb(94, 28, 110);
-    background-image: url(http://www.transparenttextures.com/patterns/xv.png);
+    background-image: url(https://www.transparenttextures.com/patterns/xv.png);
 
     .session_footer_a_1 {
       color: whitesmoke;
