--- a/FrontEnd/src/styles/Session.scss
+++ b/FrontEnd/src/styles/Session.scss
@@ -177,7 +177,7 @@ footer {
   padding: 0;
   // background-color: rgb(131, 33, 131);
   background-color: rgb(94, 28, 110);
-  background-image: url(http://www.transparenttextures.com/patterns/xv.png);
+  background-image: url(https://www.transparenttextures.com/patterns/xv.png);
 
   .session_footer_a_1 {
     color: whitesmoke;
